Refactor lib. Step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7719 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/BaseVisualEditor.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/BaseVisualEditor.mxml
@@ -6,7 +6,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.PageVO;
+			import net.vdombox.ide.common.model.vo.PageVO;
 			
 			private var _objectVO : PageVO;
 			
