--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
@@ -10,7 +10,7 @@
 			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			
-			import net.vdombox.ide.common.vo.TypeVO;
+			import net.vdombox.ide.common.model.vo.TypeVO;
 			import net.vdombox.ide.modules.dataBase.events.DataTablesEvents;
 			
 			[Embed(source="assets/disclosureClosedIcon.png")]
