Refactor lib. Step 1
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7720 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
@@ -5,13 +5,13 @@
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/mx"
 				
-				focusEnabled="false" xmlns:view="net.vdombox.view.*">
+				focusEnabled="false" xmlns:view="net.vdombox.ide.common.view.*">
 
 	<fx:Script>
 		<![CDATA[
 			import mx.binding.utils.BindingUtils;
 			
-			import net.vdombox.ide.common.vo.ServerActionVO;
+			import net.vdombox.ide.common.model.vo.ServerActionVO;
 			
 			[Embed(source='assets/action.png')]
 			public var ActionIcon:Class;
