--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
@@ -3,7 +3,7 @@
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/mx"
 				
-				focusEnabled="false" xmlns:view="net.vdombox.view.*"
+				focusEnabled="false" xmlns:view="net.vdombox.ide.common.view.*"
 				minHeight="22">
 	
 	<fx:Script>
@@ -11,7 +11,7 @@
 			import mx.binding.utils.BindingUtils;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.EventVO;
+			import net.vdombox.ide.common.model.vo.EventVO;
 			
 			[Bindable]
 			protected var currentIcon : Class;
