--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -12,11 +12,11 @@
 			import mx.controls.Image;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.EventParameterVO;
-			import net.vdombox.ide.common.vo.EventVO;
+			import net.vdombox.ide.common.model.vo.EventParameterVO;
+			import net.vdombox.ide.common.model.vo.EventVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
-			import net.vdombox.view.EyeImage;
+			import net.vdombox.ide.common.view.EyeImage;
 			
 			import spark.components.Group;
 			import spark.components.Label;
