--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
@@ -4,7 +4,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 minWidth="200" creationComplete="sparkskin1_creationCompleteHandler(event)" 
-			 xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.view.*">
+			 xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.ide.common.view.*">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.events.view.components.ActionElement")]
@@ -16,8 +16,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.interfaces.IEventBaseVO;
-			import net.vdombox.ide.common.vo.ClientActionVO;
-			import net.vdombox.ide.common.vo.ServerActionVO;
+			import net.vdombox.ide.common.model.vo.ClientActionVO;
+			import net.vdombox.ide.common.model.vo.ServerActionVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 
 			private var _data : IEventBaseVO;
