--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -4,7 +4,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/halo"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 minWidth="200"
-			 creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.view.*">
+			 creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:mx1="library://ns.adobe.com/flex/mx" xmlns:view="net.vdombox.ide.common.view.*">
 
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.modules.events.view.components.EventElement")]
@@ -16,7 +16,7 @@
 			import mx.binding.utils.ChangeWatcher;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.EventVO;
+			import net.vdombox.ide.common.model.vo.EventVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 
 			protected function hideButton_clickHandler( event : MouseEvent ) : void
