--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/tabnavigator/TabBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/tabnavigator/TabBarSkin.mxml
@@ -51,7 +51,7 @@
 
 		<s:itemRenderer>
 			<fx:Component>
-				<tabNavigatorClasses:TabBarButton mouseChildren="true" skinClass="net.vdombox.view.skins.TabBarButtonSkin"/>
+				<tabNavigatorClasses:TabBarButton mouseChildren="true" skinClass="net.vdombox.ide.common.view.skins.button.TabBarButtonSkin"/>
 			</fx:Component>
 		</s:itemRenderer>
 
