--- a/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Preview/src/net/vdombox/ide/modules/preview/view/components/Toolset.mxml
@@ -2,7 +2,7 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 height="100%" xmlns:components="net.vdombox.ide.common.components.*" >
+		 height="100%" xmlns:components="net.vdombox.ide.common.components.*" xmlns:components1="net.vdombox.ide.common.view.components.*" >
 
 	<fx:Metadata> 
 		[ResourceBundle("Preview_General")] 
@@ -13,8 +13,8 @@
 		<s:HorizontalLayout />
 	</s:layout>
 
-	<components:ToolsetButton id="toolsetButton"
+	<components1:ToolsetButton id="toolsetButton"
 							  height="100%" click="{toolsetButton.selected = false}"
 							  label="{resourceManager.getString( 'Preview_General', 'toolset_button_label' ) }"
-							  skinClass="net.vdombox.ide.common.skins.ToolsetButtonSkin" />
+							  skinClass="net.vdombox.ide.common.view.skins.button.ToolsetButtonSkin" />
 </s:Group>
