--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesListItemRenderer.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/ResourcesListItemRenderer.mxml
@@ -9,7 +9,7 @@
 
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.common.model.vo.ResourceVO;
 			import net.vdombox.ide.modules.resourceBrowser.events.ResourcesListItemRendererEvent;
 
 			[Bindable]
