git-svn-id: http://svn.vdombox.ru/flextools/trunk@7725 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Body.mxml
@@ -19,7 +19,7 @@
 		</s:fill>
 	</s:Rect>
 
-	<mx1:VDividedBox height="100%" width="228" minWidth="200" dividerSkin="net.vdombox.view.skins.DividerSkin">
+	<mx1:VDividedBox height="100%" width="228" minWidth="200" dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
 
 		<components:ContainersPanel id="containersPanel"
 									width="100%" height="25%" 
