--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ServerScriptsPanel.mxml
@@ -10,7 +10,7 @@
 			import mx.collections.ArrayList;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.ServerActionVO;
+			import net.vdombox.ide.common.model.vo.ServerActionVO;
 			import net.vdombox.ide.modules.scripts.events.ListItemRendererEvent;
 			import net.vdombox.ide.modules.scripts.events.ServerScriptsPanelEvent;
 			
