--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelector.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelector.mxml
@@ -7,7 +7,7 @@
 
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.common.model.vo.ResourceVO;
 			import net.vdombox.ide.modules.tree.events.AttributeEvent;
 			import net.vdombox.ide.modules.tree.view.skins.AttributeButtonSkin;
 
