--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelectorWindow.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/ResourceSelectorWindow.mxml
@@ -8,7 +8,7 @@
 		<![CDATA[
 			import mx.collections.ArrayList;
 			
-			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.common.model.vo.ResourceVO;
 			import net.vdombox.ide.common.events.WindowEvent;
 
 			[Bindable]
