--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationListItemRenderer.mxml
@@ -16,8 +16,8 @@
 			import mx.events.FlexEvent;
 			import mx.utils.ObjectUtil;
 			
-			import net.vdombox.ide.common.vo.ApplicationVO;
-			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.common.model.vo.ApplicationVO;
+			import net.vdombox.ide.common.model.vo.ResourceVO;
 			
 			public static const RENDERER_CHANGED : String = "rendererChanged";
 			public static const RENDERER_DOUBLE_CLICK : String = "rendererDoubleClick";
