--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsIconView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsIconView.mxml
@@ -7,7 +7,7 @@
 			import mx.binding.utils.BindingUtils;
 			import mx.utils.ObjectUtil;
 			
-			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.common.model.vo.ResourceVO;
 			import net.vdombox.ide.core.events.IconChooserEvent;
 			
 			private var _resourceVO : ResourceVO;
