--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationsView.mxml
@@ -12,9 +12,9 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.ApplicationVO;
+			import net.vdombox.ide.common.model.vo.ApplicationVO;
 			import net.vdombox.ide.core.events.ApplicationManagerEvent;
-			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			
 			import spark.components.Application;
 			import spark.components.Scroller;
