--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
@@ -26,7 +26,7 @@
 		<s:Group width="100%" minHeight="32">
 			<s:TitleBar id="titleBar"
 						minHeight="32" width="100%"
-						skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
+						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
 		</s:Group>	
 			
 		<s:Group width="100%" height="100%">
