--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
@@ -60,11 +60,11 @@
 		<s:Group width="100%" height="42">
 			<s:TitleBar id="titleBar" 
 						width="100%" height="100%"
-						skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
+						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
 			
 			<s:VGroup right="10" height="42" verticalAlign="middle" >
 				<s:Button id="closeButton"
-						  skinClass="net.vdombox.view.skins.MainCloseBtnSkin"
+						  skinClass="net.vdombox.ide.common.view.skins.button.MainCloseBtnSkin"
 						  click="hostComponent.close()"/>	
 			</s:VGroup>
 			
