--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/richTextToolbarClasses/CharMapSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/richTextToolbarClasses/CharMapSkin.mxml
@@ -43,7 +43,7 @@
 			</s:HGroup>
 			
 			<s:HGroup width="100%" height="100%" horizontalAlign="right" verticalAlign="middle">
-				<s:Button label="x" click="{hostComponent.closeHandler()}" skinClass="net.vdombox.view.skins.MainCloseBtnSkin"/>			
+				<s:Button label="x" click="{hostComponent.closeHandler()}" skinClass="net.vdombox.ide.common.view.skins.button.MainCloseBtnSkin"/>			
 			</s:HGroup>
 		</s:Group>
 		
