--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxObjectAttribute.mxml
@@ -11,7 +11,7 @@
 			import mx.collections.Sort;
 			import mx.collections.SortField;
 			
-			import net.vdombox.ide.common.vo.ObjectListVO;
+			import net.vdombox.ide.common.model.vo.ObjectListVO;
 			import net.vdombox.ide.modules.wysiwyg.events.MultilineWindowEvent;
 			
 			import spark.events.IndexChangeEvent;
