--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/main/Body.mxml
@@ -31,7 +31,7 @@
 
 	<s:Group height="100%" width="228">
 		<mx:VDividedBox height="100%" width="228"
-						dividerSkin="net.vdombox.view.skins.DividerSkin">
+						dividerSkin="net.vdombox.ide.common.view.skins.DividerSkin">
 			
 			<panels:ObjectAttributesPanel id="objectAttributesPanel"
 										  width="100%" height="60%"
