--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItemNotEmptyContent.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/windows/resourceBrowserWindow/ListItemNotEmptyContent.mxml
@@ -13,7 +13,7 @@
 			import mx.binding.utils.BindingUtils;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.vo.ResourceVO;
+			import net.vdombox.ide.common.model.vo.ResourceVO;
 			import net.vdombox.ide.modules.wysiwyg.events.ResourceVOEvent;
 			
 			import spark.effects.AnimateTransform;
