--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -51,7 +51,7 @@
 	<s:Group width="100%" height="42">
 		<s:TitleBar id="titleBar"
 					minHeight="32" width="100%"
-					skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
+					skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
 	</s:Group>	
 		
 	<s:Scroller width="100%" height="100%" horizontalScrollPolicy="off">
