--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -20,8 +20,8 @@
 			
 			import net.vdombox.ide.modules.wysiwyg.events.ResourceVOEvent;
 			import net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.ListItem;
-			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
-			import net.vdombox.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMHScrollBarSkin;
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			
 			
 			protected function resourcesList_creationCompleteHandler(event:FlexEvent):void
@@ -69,7 +69,7 @@
 		<s:Group width="100%" height="42">
 			<s:TitleBar id="titleBar"
 						minHeight="32" width="100%"
-						skinClass="net.vdombox.view.skins.PopupWindowTitleBarSkin"/>
+						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
 			<!--<s:Rect bottom="0" left="0" right="0" top="0">
 				<s:fill>
 					<s:LinearGradient rotation="90">
