git-svn-id: http://svn.vdombox.ru/flextools/trunk@7729 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/components/ObjectsTreePanelItemRenderer.mxml
+++ b/IDE/v.02/common/src/net/vdombox/components/ObjectsTreePanelItemRenderer.mxml
@@ -11,7 +11,7 @@
 			
 			import net.vdombox.ide.common.events.ObjectsTreePanelEvent;
 			import net.vdombox.ide.common.events.ResourceVOEvent;
-			import net.vdombox.ide.common.model.vo.ResourceVO;
+			import net.vdombox.ide.common.model._vo.ResourceVO;
 			
 			//private var dataChanged : Boolean = false;
 			
