--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/components/PageTypeItemRenderer.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/components/PageTypeItemRenderer.mxml
@@ -8,7 +8,7 @@
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.events.ItemRendererEvent;
-			import net.vdombox.ide.common.model.vo.ResourceVO;
+			import net.vdombox.ide.common.model._vo.ResourceVO;
 
 			[Bindable]
 			private var _typeResource : ResourceVO;
