--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/tabnavigator/TabBarSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/tabnavigator/TabBarSkin.mxml
@@ -3,7 +3,7 @@
 		xmlns:fx="http://ns.adobe.com/mxml/2009"
 		xmlns:local="*"
 		xmlns:s="library://ns.adobe.com/flex/spark"
-		xmlns:tabNavigatorClasses="net.vdombox.components.tabNavigatorClasses.*">
+		xmlns:tabNavigatorClasses="net.vdombox.components.tabNavigatorClasses.*" xmlns:tabnavigator="net.vdombox.ide.common.view.components.tabnavigator.*">
 
 	<fx:Metadata>
 		[HostComponent("spark.components.TabBar")]
@@ -51,7 +51,7 @@
 
 		<s:itemRenderer>
 			<fx:Component>
-				<tabNavigatorClasses:TabBarButton mouseChildren="true" skinClass="net.vdombox.ide.common.view.skins.button.TabBarButtonSkin"/>
+				<tabnavigator:TabBarButton mouseChildren="true" skinClass="net.vdombox.ide.common.view.skins.button.TabBarButtonSkin"/>
 			</fx:Component>
 		</s:itemRenderer>
 
