git-svn-id: http://svn.vdombox.ru/flextools/trunk@7740 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/button/ToolsetButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/button/ToolsetButtonSkin.mxml
@@ -29,7 +29,7 @@ in accordance with the terms of the license agreement accompanying it.
 		/** 
 		* @copy spark.skins.spark.ApplicationSkin#hostComponent
 		*/
-		[HostComponent("net.vdombox.ide.common.view.components.ToolsetButton")]
+		[HostComponent("net.vdombox.ide.common.view.components.button.ToolsetButton")]
 		]]>
 	</fx:Metadata>
 	
