--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/button/WorkAreaButtonSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/button/WorkAreaButtonSkin.mxml
@@ -11,7 +11,7 @@
 		/** 
 		* @copy spark.skins.spark.ApplicationSkin#hostComponent
 		*/
-		[HostComponent("net.vdombox.ide.common.view.components.WorkAreaButton")]
+		[HostComponent("net.vdombox.ide.common.view.components.button.WorkAreaButton")]
 		]]>
 	</fx:Metadata>
 
