--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
@@ -2,7 +2,7 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
 		xmlns:mx="library://ns.adobe.com/flex/mx"
-		creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:components="net.vdombox.components.*">
+		creationComplete="sparkskin1_creationCompleteHandler(event)" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.common.view.components.windows.CreatePageWindow")]
@@ -75,10 +75,10 @@
 				
 				<s:HGroup width="100%" height="100%" verticalAlign="middle" horizontalAlign="right" paddingRight="10">
 					
-					<components:VDOMButton label="Cancel"
+					<button:VDOMButton label="Cancel"
 										   click="dispatchEvent( new WindowEvent( WindowEvent.PERFORM_CANCEL ) )" />
 					
-					<components:VDOMButton label="Create"
+					<button:VDOMButton label="Create"
 							  click="dispatchEvent( new WindowEvent( WindowEvent.PERFORM_APPLY ) )" />
 					
 				</s:HGroup>
