git-svn-id: http://svn.vdombox.ru/flextools/trunk@7742 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
+++ b/IDE/v.02/common/src/net/vdombox/ide/common/view/skins/windows/CreatePageWindowSkin.mxml
@@ -61,7 +61,7 @@
 			
 			<s:List id="pageTypeList"
 					dataProvider="{ hostComponent._pagesDataProvider}" height="100%" width="100%"
-					itemRenderer="net.vdombox.ide.common.view.components.PageTypeItemRenderer"
+					itemRenderer="net.vdombox.ide.common.view.components.itemrenderers.PageTypeItemRenderer"
 					requireSelection="true" useVirtualLayout="false"
 					creationComplete="pageTypeList_creationCompleteHandler(event)" borderVisible="false"/>
 			
