--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ResourceItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ResourceItemRenderer.mxml
@@ -5,7 +5,7 @@
 
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.model.vo.ResourceVO;
+			import net.vdombox.ide.common.model._vo.ResourceVO;
 
 			[Bindable]
 			private var resourceVO : ResourceVO;
