--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/ImageToolbar.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/toolbars/ImageToolbar.mxml
@@ -9,8 +9,8 @@
 		<![CDATA[
 			import mx.utils.StringUtil;
 			
-			import net.vdombox.ide.common.model.vo.AttributeVO;
-			import net.vdombox.ide.common.model.vo.VdomObjectAttributesVO;
+			import net.vdombox.ide.common.model._vo.AttributeVO;
+			import net.vdombox.ide.common.model._vo.VdomObjectAttributesVO;
 			import net.vdombox.ide.modules.wysiwyg.events.ToolbarEvent;
 			import net.vdombox.ide.modules.wysiwyg.interfaces.IRenderer;
 			import net.vdombox.ide.modules.wysiwyg.interfaces.IToolbar;
