--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/ComboBoxAttribute.mxml
@@ -8,7 +8,7 @@
 			import mx.collections.Sort;
 			import mx.collections.SortField;
 			
-			import net.vdombox.ide.common.model.vo.ObjectListVO;
+			import net.vdombox.ide.common.model._vo.ObjectListVO;
 			import net.vdombox.ide.modules.wysiwyg.events.AttributeEvent;
 			import net.vdombox.ide.modules.wysiwyg.events.MultilineWindowEvent;
 			
