--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/EditorSkin.mxml
@@ -6,7 +6,7 @@
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
 			 width="100%" height="100%"
-			 creationComplete="creationCompleteHandler()" xmlns:components1="net.vdombox.ide.common.view.components.*">
+			 creationComplete="creationCompleteHandler()" xmlns:components1="net.vdombox.ide.common.view.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 
 	<fx:Metadata>
 		<![CDATA[ 
@@ -85,7 +85,7 @@
 				  left="1" right="1" top="1">
 			
 			<s:HGroup includeIn="xml, xmlDisabled">
-				<components1:WorkAreaButton id="saveXMLButton"
+				<button:WorkAreaButton id="saveXMLButton"
 											  height="25" label="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_xml_save_button_label' ) }"/>
 				
 				<mx:Spacer width="20"/>
@@ -113,7 +113,7 @@
 							 text="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_wysiwyg_button_label' ) }"/>
 					<mx:Spacer height="100%"/>
 					<s:HGroup>
-						<mx:Image source="@Embed('icons/triangle.png')" 
+						<mx:Image source="@Embed('assets/triangle.png')" 
 								  smoothBitmapContent="true" 
 								  visible.xml="false" visible.wysiwyg="true"/>
 					</s:HGroup>
@@ -131,7 +131,7 @@
 							 text="{ resourceManager.getString( 'Wysiwyg_General', 'work_area_xml_button_label' ) }"/>
 					<mx:Spacer height="100%"/>
 					<s:HGroup>
-						<mx:Image source="@Embed('icons/triangle.png')" 
+						<mx:Image source="@Embed('assets/triangle.png')" 
 								  smoothBitmapContent="true" 
 								  visible.xml="true" visible.wysiwyg="false"/>
 					</s:HGroup>
@@ -167,7 +167,7 @@
 								fontFamily="Tahoma" fontSize="12"/>
 					
 					<s:HGroup height="25" verticalAlign="middle" gap="5" width="80">
-						<mx:Image source="@Embed('icons/Cursor.png')" smoothBitmapContent="true" />
+						<mx:Image source="@Embed('assets/Cursor.png')" smoothBitmapContent="true" />
 						<s:VGroup height="25" gap="0" verticalAlign="middle">
 							<s:Label height="12" 
 									 id="strXWritten" 
