--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/MultilineWindowSkin.mxml
@@ -6,7 +6,7 @@
 		xmlns="vdom.containers.*"
 		xmlns:controls="vdom.controls.*" 
 		width="790" height="550" minWidth="600" minHeight="500" 
-		xmlns:ClassComponents1="net.vdombox.ide.modules.wysiwyg.view.components.ClassComponents.*" xmlns:components="net.vdombox.components.*"
+		xmlns:ClassComponents1="net.vdombox.ide.modules.wysiwyg.view.components.ClassComponents.*" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*"
 		>
 	<!-- host component -->
 	<fx:Metadata>
@@ -70,7 +70,7 @@
 		
 		<s:Rect width="100%" height="100%">
 			<s:fill>
-				<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+				<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
 			</s:fill>
 		</s:Rect>
 		
@@ -78,17 +78,17 @@
 				  bottom="0" gap="15" paddingLeft="25" paddingTop="10"
 				  paddingRight="15" verticalAlign="middle">
 			
-			<components:VDOMButton icon="@Embed(source='icons/Add.png')"
+			<button:VDOMButton icon="@Embed(source='assets/Add.png')"
 					  label="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_add_resource' ) }"
 					  click="{hostComponent.showResourceSelecterWindow()}"/>
 			
 			<mx:Spacer width="100%"/>
 			
-			<components:VDOMButton width="48"
-					  icon="@Embed(source='icons/Cancel.png')"
+			<button:VDOMButton width="48"
+					  icon="@Embed(source='assets/Cancel.png')"
 					  click="{hostComponent.cancel_close_window()}"/>
 			
-			<components:VDOMButton label="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_save' ) }"
+			<button:VDOMButton label="{ resourceManager.getString( 'Wysiwyg_General', 'multiline_window_save' ) }"
 					  click="hostComponent.ok_close_window()" />
 		</s:HGroup>
 		
