--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/skins/ResourceSelectorWindowSkin.mxml
@@ -5,7 +5,7 @@
 			 xmlns:fb="http://ns.adobe.com/flashbuilder/2009"
 			 xmlns:resourceBrowserWindow="net.vdombox.ide.modules.wysiwyg.view.components.windows.resourceBrowserWindow.*"
 			 width="790" height="550" minWidth="700" minHeight="500"
-			 focusColor="#CCCCCC" xmlns:components="net.vdombox.components.*">
+			 focusColor="#CCCCCC" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<fx:Metadata>
 		<![CDATA[ 
 		/** 
@@ -70,16 +70,6 @@
 			<s:TitleBar id="titleBar"
 						minHeight="32" width="100%"
 						skinClass="net.vdombox.ide.common.view.skins.PopupWindowTitleBarSkin"/>
-			<!--<s:Rect bottom="0" left="0" right="0" top="0">
-				<s:fill>
-					<s:LinearGradient rotation="90">
-						<s:GradientEntry color="#B70000"/>
-						<s:GradientEntry color="#A00000"/>
-					</s:LinearGradient>
-				</s:fill>
-			</s:Rect>
-			<s:Label top="12" left="20" color="#FFFFFF" fontSize="20"
-				text="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_title' ) }" />-->
 		</s:Group>
 		
 		<s:Group width="100%" height="39">
@@ -109,9 +99,9 @@
 				
 				<mx:Spacer width="100%"/>
 				
-				<components:VDOMButton label="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_upload' ) }" 
+				<button:VDOMButton label="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_upload' ) }" 
 						   click="hostComponent.uploadFile(event)"
-						   icon="@Embed(source='icons/Add.png')"
+						   icon="@Embed(source='assets/Add.png')"
 						   focusColor="#CCCCCC"/>	
 			</s:HGroup>
 		</s:Group>
@@ -125,7 +115,7 @@
 		<s:Group width="100%" height="100%">
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+					<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
 				</s:fill>
 			</s:Rect>
 			
@@ -165,12 +155,12 @@
 						  paddingBottom="2" paddingLeft="10" paddingRight="10" paddingTop="2"
 						  verticalAlign="middle" horizontalAlign="right">
 					
-					<components:VDOMButton id="cancelButton" width="48"
+					<button:VDOMButton id="cancelButton" width="48"
 							  click="hostComponent.onCancelClick()"
-							  icon="@Embed(source='icons/Cancel.png')"
+							  icon="@Embed(source='assets/Cancel.png')"
 							  focusColor.normal="#CCCCCC"/>
 					
-					<components:VDOMButton focusColor.normal="#CCCCCC"
+					<button:VDOMButton focusColor.normal="#CCCCCC"
 							  label="{ resourceManager.getString( 'Wysiwyg_General', 'resource_selector_window_insert' ) }"
 							  click="hostComponent.onApplyClick()" color="#B33535"
 							  />
@@ -178,15 +168,6 @@
 				</s:HGroup>
 				
 			</s:VGroup>
-			
-			<!-- resize handle -->
-			<!--<s:Group id="resizeHandle" right="1" bottom="1" width="15" height="15">
-				<s:Path data="M 4 13 L 13 4 L 13 13 L 4 13">
-					<s:fill>
-						<s:SolidColor color="0x000000" />
-					</s:fill>
-				</s:Path>
-			</s:Group>-->
 			
 			<s:Button id="gripper" 
 					  right="0" bottom="0"
